# window-change-detector

./: Cargo.toml  LICENSE  README.md
src/: main.rs
